--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Helo wrold</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+Helo wrold
+</body>
+</html>
