--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Helo wrold</title>
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+	<title>Helo wrold</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 Helo wrold
